--- a/inst/examples/slides.html
+++ b/inst/examples/slides.html
@@ -1,36 +1,32 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
+<!DOCTYPE html>
+	<!--
+	Google HTML5 slide template
+
+Authors: Luke Mah?? (code)
+Marcin Wichary (code and design)
+
+Dominic Mazzoni (browser compatibility)
+Charles Chen (ChromeVox support)
+
+URL: http://code.google.com/p/html5slides/
+	-->
+	
+<html>
 <head>
-	<title>Shower Presentation Template</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=1274, user-scalable=no">
+	<title>Presentation</title>
+	<meta charset='utf-8'>
+	
 	<!-- LOAD STYLE SHEETS -->
-	<link rel="stylesheet" href="../libraries/shower/themes/ribbon/styles/style.css">
-	<link rel="stylesheet" href="../libraries/highlight/styles/acid.css">  
+	<link rel="stylesheet" href="/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries/html5slides/styles.css">
+	<link rel="stylesheet" href="/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries/highlight.js/styles/default.css">
   <!-- LOAD CUSTOM CSS -->
   <link rel="stylesheet" href="assets/stylesheets/custom.css">
 
     
-	<!--
-		To apply styles to the certain slides
-		use slide ID to get needed elements
-		-->
-	<style>
-		#Cover h2 {
-			color:#FFF;
-			text-align:center;
-			font-size:70px;
-			}
-		#FitToWidth h2,
-		#FitToHeight h2 {
-			color:#FFF;
-			text-align:center;
-			}
-	</style> 
 </head>
-<body class="list">
-  <div class="slide fill" id = "U4oV"><div>
-    <section>
+<body style='display: none'>
+	<section class='slides layout-regular template-default'>
+	  <article class = "fill" id = "flLw"> 
       <h1>
   <span class = 'yellow'>Slidify</font><br/>
   <span class = 'white' style = 'font-size: 0.7em;'>
@@ -43,104 +39,101 @@
 
 <p><img src="http://goo.gl/EpXln" alt="slides"/></p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "E2tm"><div>
-    <section>
+    </article>
+	  <article class = "" id = "WJ8m"> 
       <h3>Overview</h3>
 
 <p>The objective of <code>slidify</code> is to make it easy to create reproducible HTML5 presentations from <code>.Rmd</code> files. </p>
 
 <p>The guiding philosophy of <code>slidify</code> is to completely separate writing of content from its rendering, so that content can be written once in <code>R Markdown</code>, and rendered as an <code>HTML5</code> presentation using any of the <code>HTML5</code> slide frameworks supported.</p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "niiU"><div>
-    <section>
+    </article>
+	  <article class = "" id = "Mva9"> 
       <h1>Motivation</h1>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "FZS1"><div>
-    <section>
+    </article>
+	  <article class = "" id = "cILj"> 
       <h1>Several HTML5 slide frameworks exist&hellip;</h1>
 
-    </section>
-  </div></div>
-  <div class="slide fill" id = "a33E"><div>
-    <section>
+    </article>
+	  <article class = "fill" id = "HrCN"> 
       <h3>deck.js</h3>
 
 <p><img src="assets/media/deck.js.png" alt="deck.js"/></p>
 
-    </section>
-  </div></div>
-  <div class="slide fill" id = "MBoU"><div>
-    <section>
+    </article>
+	  <article class = "fill" id = "eMWe"> 
       <h3>slidy</h3>
 
 <p><img src="assets/media/slidy.png" alt="slidy"/></p>
 
-    </section>
-  </div></div>
-  <div class="slide fill" id = "jwNo"><div>
-    <section>
+    </article>
+	  <article class = "fill" id = "xuy2"> 
       <h3>html5slides</h3>
 
 <p><img src="assets/media/html5slides.png" alt="slidy"/></p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "RbEn"><div>
-    <section>
+    </article>
+	  <article class = "" id = "aWjf"> 
       <h3>&hellip; but it is a pain to write HTML</h3>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "gc8i"><div>
-    <section>
+    </article>
+	  <article class = "" id = "cDQZ"> 
       <h3>Installation</h3>
 
 <p>This package is not available on <code>CRAN</code> as yet. A development version can be installed from <code>github</code> using the <code>devtools</code> package. </p>
 
-<div class="chunk"><div class="rcode"><div class="source"><pre class="knitr"><span class="functioncall">library</span><span class="keyword">(</span><span class="symbol">devtools</span><span class="keyword">)</span>
-<span class="functioncall">install_github</span><span class="keyword">(</span><span class="string">'slidify'</span><span class="keyword">,</span> <span class="string">'ramnathv'</span><span class="keyword">)</span>
-</pre></div></div></div>
+<pre><code class="r">library(devtools)
+install_github(&quot;slidify&quot;, &quot;ramnathv&quot;)
+</code></pre>
 
 <p>In addition to <code>slidify</code>, you would also need to install development versions of <code>knitr</code>, <code>whisker</code> and <code>markdown</code>.</p>
 
-<div class="chunk"><div class="rcode"><div class="source"><pre class="knitr"><span class="functioncall">install_github</span><span class="keyword">(</span><span class="string">'knitr'</span><span class="keyword">,</span> <span class="string">'yihui'</span><span class="keyword">)</span>
-<span class="functioncall">install_github</span><span class="keyword">(</span><span class="string">'whisker'</span><span class="keyword">,</span> <span class="string">'edwindj'</span><span class="keyword">)</span>
-<span class="functioncall">install_github</span><span class="keyword">(</span><span class="string">'markdown'</span><span class="keyword">,</span> <span class="string">'rstudio'</span><span class="keyword">)</span>
-</pre></div></div></div>
+<pre><code class="r">install_github(&quot;knitr&quot;, &quot;yihui&quot;)
+install_github(&quot;whisker&quot;, &quot;edwindj&quot;)
+install_github(&quot;markdown&quot;, &quot;rstudio&quot;)
+</code></pre>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "XSer"><div>
-    <section>
-      <h3>Motivation</h3>
-
-    </section>
-  </div></div>
-  <div class="slide " id = "qRDj"><div>
-    <section>
+    </article>
+	  <article class = "" id = "hRB1"> 
       <h3>Usage</h3>
 
 <p><code>slidify</code> is designed to make it very easy for a HTML novice to generate a crisp, visually appealing <code>HTML5</code> slide deck. You can do it in just three steps!</p>
 
-<p class = ''>build</p>
-
 <ul>
-<li>Write your source file in <a href="http://goo.gl/KKdaf">R Markdown</a></li>
+<li>Write your <a href="slides.Rmd">source</a> file in <a href="http://goo.gl/KKdaf">R Markdown</a></li>
 <li>Separate your slides using a horizontal rule <code>---</code></li>
-<li>Run <code>slidify(&quot;slides.Rmd&quot;)</code> to generate your slide deck.</li>
+<li>Run <code>slidify(&quot;slides.Rmd&quot;)</code> to generate your <a href="slides.html">slide deck</a>.</li>
 </ul>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "J3sT"><div>
-    <section>
-      <h3>Framework</h3>
+    </article>
+	  <article class = "" id = "3K2p"> 
+      <h1>Customizing Your Presentation</h1>
+
+    </article>
+	  <article class = "" id = "lq7x"> 
+      <h3>Options</h3>
+
+<p><code>slidify</code> aims to provide a high degree of customization for the more advanced users. You can access the options currently available by typing <code>slidifyOptions()</code> at the command line. The main options are</p>
+
+<pre><code> framework       : slide generation framework to use
+ theme           : theme to use for styling slide content
+ transition      : theme to use for slide transitions
+ highlighter     : tool to use for syntax highlighting
+ histyle         : style to use for syntax highlighting
+ copy_libraries  : should library files be copied to slide directory
+ lib_path        : path to libraries (framework, highlighter)
+ layout          : slide layout to use
+ template        : slide template to use
+ mathjax         : should mathjax be used
+ embed           : should local files be embedded
+</code></pre>
+
+<p>The next few slides provide a more detailed overview of each of these options and what values they can take.</p>
+
+    </article>
+	  <article class = "" id = "Cp8l"> 
+      <h3>framework</h3>
 
 <p><code>slidify</code> allows you to render your slides using several HTML5 slide frameworks. Currently supported frameworks are:</p>
 
@@ -149,16 +142,14 @@
 <li><a href="http://paulrouget.com/dzslides/">dzslides</a></li>
 <li><a href="http://html5slides.googlecode.com/">html5slides</a></li>
 <li><a href="http://pepelsbey.github.com/shower/en.htm">shower</a></li>
-<li><a href="http://www.w3.org/Talks/Tools/Slidy2/Overview.html#(1)">slidy</a></li>
+<li><a href="http://www.w3.org/Talks/Tools/Slidy2/Overview.html#(1">slidy</a>)</li>
 </ul>
 
 <p>Extending <code>slidify</code> to accommodate other frameworks is pretty straightforward. The plan is to support more frameworks over time.</p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "6HZM"><div>
-    <section>
-      <h3>Theme</h3>
+    </article>
+	  <article class = "" id = "Anoa"> 
+      <h3>theme</h3>
 
 <p>The <code>theme</code> option lets you style your slides. Currently, this option is available only for <code>deck.js</code> which allows the following themes</p>
 
@@ -170,11 +161,9 @@
 
 <p>Themes are just <code>css</code> files. So it is easy to extend this option to the other frameworks if you can write css. </p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "UxqE"><div>
-    <section>
-      <h3>Transition</h3>
+    </article>
+	  <article class = "" id = "0wFV"> 
+      <h3>transition</h3>
 
 <p>The <code>transition</code> option allows you to define the transition between slides. Currently, this option is available only for <code>deck.js</code> which allows the following transitions</p>
 
@@ -186,45 +175,41 @@
 
 <p>Please consult <a href="http://goo.gl/UFthM">deck.js</a> documentation for more information on <code>themes</code> and <code>transitions</code></p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "WjUi"><div>
-    <section>
-      <h3>Highlighter</h3>
+    </article>
+	  <article class = "" id = "KwCY"> 
+      <h3>highlighter</h3>
 
 <p><code>slidify</code> is designed to be modular and syntax highlighting is one module. Currently two options are supported</p>
 
 <ul>
-<li><code>js</code> </li>
-<li><code>R</code></li>
+<li><code>highlight.js</code> </li>
+<li><code>highlight</code></li>
 </ul>
 
-<p>The <code>js</code> option does client side highlighting using the javascript library <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>, while the <code>R</code> option generates a static page, highlighted using the R package <a href="http://goo.gl/uy8Ww">highlight</a>. </p>
+<p>The <code>highlight.js</code> option does client side highlighting using the javascript library <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>, while the <code>highlight</code> option generates a static page, highlighted using the R package <a href="http://goo.gl/uy8Ww">highlight</a>. </p>
 
-<p>You will notice that the quality of highlighting for <code>R</code> code is better when done with the <code>R</code> package, rather than <code>highlight.js</code>.</p>
+<p>You will notice that the quality of highlighting for <code>R</code> code is better when done with the <code>R</code> package, rather than <code>highlight.js</code>. </p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "jsXC"><div>
-    <section>
-      <h3>Highlight Style</h3>
+<p>It would be straightforward to add other <code>javascript</code> based syntax highlighters like <code>google.prettify</code>, <code>shJS</code> etc.</p>
+
+    </article>
+	  <article class = "" id = "hhW6"> 
+      <h3>histyle</h3>
 
 <p><code>slidify</code> allows you complete control over how you want to style your source code using <code>css</code>. The styles currently supported depend on the <code>highlighter</code> chosen.</p>
 
 <ul>
-<li><code>js</code> see documentation for <a href="http://goo.gl/uEJj">highlight.js</a></li>
-<li><code>R</code>  type <code>knit_theme[[&#39;get&#39;]]()</code> to see available styles</li>
+<li><code>highlight.js</code> :  see its <a href="http://goo.gl/uEJj">documentation</a>. </li>
+<li><code>highlight</code> : type <code>knit_theme[[&#39;get&#39;]]()</code> to see available styles</li>
 </ul>
 
 <p>In order to use the <code>R</code> option, you need to include the line <code>opts_knit$set(out.format = &#39;html&#39;)</code> inside your <code>.Rmd</code> file. This is required to fool <code>knitr</code> into highlighting source code. Specifying it outside the document does not work as <code>knitr</code> resets it to <code>md</code> as soon as it sees the <code>.Rmd</code> extension.</p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "ue2c"><div>
-    <section>
-      <h3>Math</h3>
+    </article>
+	  <article class = "" id = "gEAY"> 
+      <h3>mathjax</h3>
 
-<p>This option allows you to write math in your presentations. <code>slidify</code> automatically adds a link to the <code>js</code> files from Mathjax CDN. Here are Maxwell&#39;s Equations from the Mathjax website.</p>
+<p>Setting <code>mathjax</code> to true allows you to write math in your presentations. <code>slidify</code> automatically adds a link to the required <code>js</code> files from Mathjax CDN. </p>
 
 <p>\[
 \begin{aligned}
@@ -243,10 +228,8 @@
 \end{vmatrix}
 \]</p>
 
-    </section>
-  </div></div>
-  <div class="slide build" id = "GULp"><div>
-    <section>
+    </article>
+	  <article class = "build" id = "cPWj"> 
       <h3>Animated Lists</h3>
 
 <p>It is easy to animate a list by adding the class specified <code>build</code>. For example, consider the <code>markdown</code> source below</p>
@@ -264,10 +247,8 @@
 <li>Point 3</li>
 </ul>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "wfWc"><div>
-    <section>
+    </article>
+	  <article class = "" id = "1i0m"> 
       <h3>Issues</h3>
 
 <p>Different <code>HTML5</code> slide generation frameworks style the same elements differently. Moreover, they use different classes to define incremental builds, full page assets/media etc.</p>
@@ -276,10 +257,8 @@
 
 <p>The long-term goal of <code>slidify</code> is to be able to truly stand by the &ldquo;write once, style as you like&rdquo; idea. </p>
 
-    </section>
-  </div></div>
-  <div class="slide smaller" id = "rR7u"><div>
-    <section>
+    </article>
+	  <article class = "smaller" id = "FDS8"> 
       <h3>License</h3>
 
 <p><code>slidify</code> is made available under the MIT License. The <code>slidify</code> logo was created using <a href="http://goo.gl/zmJHP">supalogo</a>. All included <code>css</code> and <code>javascript</code> are licensed under the terms specified by the respective slide generation frameworks.</p>
@@ -292,16 +271,12 @@
 
 <p>THE SOFTWARE IS PROVIDED &ldquo;AS IS&rdquo;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "toA8"><div>
-    <section>
+    </article>
+	  <article class = "" id = "ZpKU"> 
       <h1>References</h1>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "Aqzl"><div>
-    <section>
+    </article>
+	  <article class = "" id = "qR7e"> 
       <h3>HTML5 Slides and R</h3>
 
 <ol>
@@ -312,10 +287,8 @@
 <li><a href="http://goo.gl/kdhBO">Interactive Presentations with deck.js</a></li>
 </ol>
 
-    </section>
-  </div></div>
-  <div class="slide " id = "2TDt"><div>
-    <section>
+    </article>
+	  <article class = "" id = "VyHY"> 
       <h3>R Markdown and knitr</h3>
 
 <ol>
@@ -328,36 +301,34 @@
 <li><a href="http://goo.gl/ZTSD7">knitr, Slideshows and Dropbox</a></li>
 </ol>
 
-    </section>
-  </div></div>
-  <div class="slide smaller" id = "5qGl"><div>
-    <section>
-      <div class="chunk"><div class="rcode"><div class="output"><pre class="knitr">$framework
-[1] "html5slides"
+    </article>
+	  <article class = "smaller fill" id = "moGl"> 
+      <pre><code>$framework
+[1] &quot;html5slides&quot;
 
 $highlighter
-[1] "highlight"
+[1] &quot;highlight&quot;
 
 $theme
-[1] "web-2.0"
+[1] &quot;web-2.0&quot;
 
 $transition
-[1] "horizontal-slide"
+[1] &quot;horizontal-slide&quot;
 
 $histyle
-[1] "acid"
+[1] &quot;acid&quot;
 
 $copy_libraries
 [1] FALSE
 
 $lib_path
-[1] "/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries"
+[1] &quot;/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries&quot;
 
 $layout
-[1] "layout-regular"
+[1] &quot;layout-regular&quot;
 
 $template
-[1] "template-default"
+[1] &quot;template-default&quot;
 
 $mathjax
 [1] TRUE
@@ -365,12 +336,13 @@ $mathjax
 $embed
 [1] FALSE
 
-</pre></div></div></div>
+</code></pre>
 
-    </section>
-  </div></div>
-  <div class="progress"><div></div></div>
-	<script src="../libraries/shower/scripts/script.js"></script>
+    </article>
+  </section>
+</body>
+  <!-- LOAD JAVASCRIPTS  -->
+	<script src='/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries/html5slides/slides.js'></script>
 	<!-- LOAD MATHJAX JS -->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -381,8 +353,10 @@ $embed
 src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   <!-- DONE LOADING MATHJAX -->
-	
-		<!-- Copyright © 2010–2012 Vadim Makeev — pepelsbey.net -->
-	<!-- Photos by John Carey — fiftyfootshadows.net -->
-</body>
+	  <!-- LOAD HIGHLIGHTER JS FILES -->
+  <script src="/Library/Frameworks/R.framework/Versions/2.15/Resources/library/slidify/libraries/highlight.js/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+  <!-- DONE LOADING CSS FILES AND JS -->
+
+		
 </html>
