--- a/start.html
+++ b/start.html
@@ -204,7 +204,7 @@
 
 <h3>Step 1: Author Deck</h3>
 
-<p>This step will create a new directory <code>myrepo</code> and add the necessary scaffolding. If you have <code>git</code> installed, it will initialize it a <code>git</code> repo, checkout its <code>gh-pages</code> branch, add and commit everything. Finally, it will open <code>index.Rmd</code> for you to edit.</p>
+<p>This step will create a new directory <code>mydeck</code> and add the necessary scaffolding. If you have <code>git</code> installed, it will initialize it a <code>git</code> repo, checkout its <code>gh-pages</code> branch, add and commit everything. Finally, it will open <code>index.Rmd</code> for you to edit.</p>
 
 <pre><code>author(&quot;mydeck&quot;)
 </code></pre>
