--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
      </div>
      <div class="span5 offset2">
-      <h1>Slidify<sup>$\alpha$</sup></h1>
+      <h1>Slidify</h1>
       <p>Stunning presentations from markdown</p>
 
 <p><a class="btn btn-primary btn-large" href='start.html'>
