--- a/index.html
+++ b/index.html
@@ -95,15 +95,21 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
-                      	    <a href="../examples/deck.js">
+                      	    <a href="examples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="../examples/shower">
+                      	    <a href="examples/shower">
                       	     <i class="icon-hand-right"> </i>
                       	     shower
+                      	    </a>
+                      	  </li>
+                      	  <li>
+                      	    <a href="examples/landslide">
+                      	     <i class="icon-hand-right"> </i>
+                      	     landslide
                       	    </a>
                       	  </li>
                       </ul>
@@ -141,7 +147,10 @@
    <div class="row-fluid">
      <div class='span10 offset1'>
      <div class="span5">
-       <iframe width="500" height="315" src="http://www.youtube.com/embed/APN3J4H5SEg?t=54s&rel=0" frameborder="0" allowfullscreen></iframe>
+       <iframe class="frame" width="500" height="375" 
+  src="examples/dzslides/embedder.html#index.html">
+  <a href="examples/dzslides/index.html">link to the presentation</a>
+</iframe>
 
      </div>
      <div class="span5 offset2">
