--- a/publish.html
+++ b/publish.html
@@ -95,15 +95,21 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
-                      	    <a href="../examples/deck.js">
+                      	    <a href="examples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="../examples/shower">
+                      	    <a href="examples/shower">
                       	     <i class="icon-hand-right"> </i>
                       	     shower
+                      	    </a>
+                      	  </li>
+                      	  <li>
+                      	    <a href="examples/landslide">
+                      	     <i class="icon-hand-right"> </i>
+                      	     landslide
                       	    </a>
                       	  </li>
                       </ul>
