--- a/start.html
+++ b/start.html
@@ -95,25 +95,19 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
-                      	    <a href="../examples/deck.js">
+                      	    <a href="examples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="../examples/shower">
+                      	    <a href="examples/shower">
                       	     <i class="icon-hand-right"> </i>
                       	     shower
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="../examples/io2012">
-                      	     <i class="icon-hand-right"> </i>
-                      	     io2012
-                      	    </a>
-                      	  </li>
-                      	  <li>
-                      	    <a href="../examples/landslide">
+                      	    <a href="examples/landslide">
                       	     <i class="icon-hand-right"> </i>
                       	     landslide
                       	    </a>
