--- a/start.html
+++ b/start.html
@@ -95,6 +95,12 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
+                      	    <a href="examples/intro">
+                      	     <i class="icon-hand-right"> </i>
+                      	     io2012
+                      	    </a>
+                      	  </li>
+                      	  <li>
                       	    <a href="examples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
