--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
-                      	    <a href="examples/intro">
+                      	    <a href="samples/intro">
                       	     <i class="icon-hand-right"> </i>
                       	     io2012
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/deck.js">
+                      	    <a href="samples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/shower">
+                      	    <a href="samples/shower">
                       	     <i class="icon-hand-right"> </i>
                       	     shower
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/landslide">
+                      	    <a href="samples/landslide">
                       	     <i class="icon-hand-right"> </i>
                       	     landslide
                       	    </a>
@@ -154,8 +154,8 @@
      <div class='span10 offset1'>
      <div class="span5">
        <iframe class="frame" width="500" height="375" 
-  src="examples/dzslides/embedder.html#index.html">
-  <a href="examples/dzslides/index.html">link to the presentation</a>
+  src="samples/dzslides/embedder.html#index.html">
+  <a href="samples/dzslides/index.html">link to the presentation</a>
 </iframe>
 
      </div>
