--- a/extend.html
+++ b/extend.html
@@ -95,25 +95,25 @@
                       </a>
                       <ul class="dropdown-menu">
                       	  <li>
-                      	    <a href="examples/intro">
+                      	    <a href="samples/intro">
                       	     <i class="icon-hand-right"> </i>
                       	     io2012
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/deck.js">
+                      	    <a href="samples/deck.js">
                       	     <i class="icon-hand-right"> </i>
                       	     deck.js
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/shower">
+                      	    <a href="samples/shower">
                       	     <i class="icon-hand-right"> </i>
                       	     shower
                       	    </a>
                       	  </li>
                       	  <li>
-                      	    <a href="examples/landslide">
+                      	    <a href="samples/landslide">
                       	     <i class="icon-hand-right"> </i>
                       	     landslide
                       	    </a>
