--- a/index.html
+++ b/index.html
@@ -153,18 +153,20 @@
    <div class="row-fluid">
      <div class='span10 offset1'>
      <div class="span5">
-       <iframe class="frame" width="500" height="375" 
+       <iframe width="500" height="360" src="http://www.youtube.com/embed/I95GOmLc7TA?rel=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
+
+<!-- <iframe class="frame" width="500" height="375" 
   src="samples/dzslides/embedder.html#index.html">
   <a href="samples/dzslides/index.html">link to the presentation</a>
-</iframe>
+</iframe> -->
 
      </div>
      <div class="span5 offset2">
       <h1>Slidify</h1>
       <p>Stunning presentations from markdown</p>
 
-<p><a class="btn btn-primary btn-large" href='start.html'>
- Get Started &raquo;
+<p><a class="btn btn-primary btn-large" href='https://github.com/downloads/ramnathv/slidify/slidify_0.3.0.zip'>
+ Windows Binary
 </a></p>
 
  
