animate bullets of last slide of intro.Rmd to match displayed code from previous slide

--- a/samples/io2012/intro.html
+++ b/samples/io2012/intro.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href = "assets/css/lists.css">
 <link rel="stylesheet" href = "assets/css/quotes.css">
 <link rel="stylesheet" href = "assets/css/ribbons.css">
+<link rel="stylesheet" href = "assets/css/sizes.css">
 <link rel="stylesheet" href = "assets/css/tables.css">
 <link rel="stylesheet" href = "assets/css/text.css">
 
@@ -167,9 +168,9 @@ This is an unordered list which is animated
     <h2>Slide 1</h2>
   </hgroup>
   <article>
-    <p>This is an unordered list </p>
+    <p>This is an unordered list which is animated</p>
 
-<ul>
+<ul class = "build">
 <li>Point 1</li>
 <li>Point 2</li>
 <li>Point 3</li>
