make folder selfcontained

--- a/samples/impressjs/index.html
+++ b/samples/impressjs/index.html
@@ -8,10 +8,10 @@
    <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
    <meta name="author" content="Ramnath Vaidyanathan" />
    <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
-   <link href="../../libraries/frameworks/impressjs/css/impress-demo.css" rel="stylesheet" />
-   <link rel="shortcut icon" href="../../libraries/frameworks/impressjs/favicon.png" />
-   <link rel="apple-touch-icon" href="../../libraries/frameworks/impressjs/apple-touch-icon.png" />
-   <link href="../../libraries/highlighters/highlight.js/css/tomorrow.css" rel="stylesheet" />   
+   <link href="libraries/frameworks/impressjs/css/impress-demo.css" rel="stylesheet" />
+   <link rel="shortcut icon" href="libraries/frameworks/impressjs/favicon.png" />
+   <link rel="apple-touch-icon" href="libraries/frameworks/impressjs/apple-touch-icon.png" />
+   <link href="libraries/highlighters/highlight.js/css/tomorrow.css" rel="stylesheet" />   
 </head>
 <body class="impress-not-supported">
   <div class="fallback-message">
@@ -160,10 +160,10 @@ and based on the <strong>power of CSS3 transforms and transitions</strong> in mo
     document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
   }
  </script>
- <script src="../../libraries/frameworks/impressjs/js/impress.js"></script>
+ <script src="libraries/frameworks/impressjs/js/impress.js"></script>
  <script>impress().init();</script>
  <!-- LOAD HIGHLIGHTER JS FILES -->
- <script src="../../libraries/highlighters/highlight.js/highlight.pack.js"></script>
+ <script src="libraries/highlighters/highlight.js/highlight.pack.js"></script>
  <script>hljs.initHighlightingOnLoad();</script>
  <!-- DONE LOADING HIGHLIGHTER JS FILES -->
  </html>
