modify link to presentation

--- a/samples/impressjs/index.html
+++ b/samples/impressjs/index.html
@@ -150,7 +150,7 @@ and based on the <strong>power of CSS3 transforms and transitions</strong> in mo
   <iframe src="http://ghbtns.com/github-btn.html?user=ramnathv&repo=slidify&&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
   
   <a href="http://twitter.com/share" class="twitter-share-button" data-text="Slidify with impress.js!" 
-    data-url="http://www.slidify.org">  
+    data-url="http://www.slidify.org/samples/impressjs">  
   </a>
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
   </div>
